--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -1,6 +1,7 @@
 :root {
   --back-color: white;
   --main-color: black;
+  --additionl-color: #cccccc;
   --accent-color: crimson;
   --invert-accent: red;
 
