--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 :root {
   --back-color: white;
   --main-color: black;
+  --additionl-color: #cccccc;
   --accent-color: crimson;
   --invert-accent: red;
   font-family: Inter, sans-serif;
@@ -197,8 +198,8 @@ table {
 }
 
 .current-date {
-  outline: 0.08em solid black;
-  outline-offset: 0.6em;
+  outline: 0.075em solid var(--additionl-color);
+  outline-offset: 0.5em;
   border-radius: 50%;
 }
 
